--- a/.github/workflows/main_azure-sql-world.yml
+++ b/.github/workflows/main_azure-sql-world.yml
@@ -25,6 +25,11 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
+        env:
+          PROD_DATABASE_URL: ${{secret.PROD_DATABASE_URL}}
+          PROD_USERNAME: ${{secrets.PROD_USERNAME}}
+          PROD_PASSWORD: ${{secrets.PROD_PASSWORD}}
+          
         run: mvn clean install
 
       - name: Upload artifact for deployment job
@@ -60,4 +65,5 @@ jobs:
           app-name: 'azure-sql-world'
           slot-name: 'Production'
           package: '*.jar'
+
           
