--- a/.github/workflows/main_azure-sql-world.yml
+++ b/.github/workflows/main_azure-sql-world.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build with Maven
         env:
-          PROD_DATABASE_URL: ${{secret.PROD_DATABASE_URL}}
+          PROD_DATABASE_URL: ${{secrets.PROD_DATABASE_URL}}
           PROD_USERNAME: ${{secrets.PROD_USERNAME}}
           PROD_PASSWORD: ${{secrets.PROD_PASSWORD}}
           
@@ -67,4 +67,5 @@ jobs:
           package: '*.jar'
 
           
+
 
